Using @ collapse syntax to ignore orb.yml filename as orb name.

--- a/.circleci.src/orbs/heroku/@orb.yml
+++ b/.circleci.src/orbs/heroku/@orb.yml
@@ -5,17 +5,17 @@ commands:
   install:
     parameters:
       os:
-        default: “linux”
-        description: The target Operating System for the heroku binary. Must be one of "linux", “darwin”, “win32”.
+        default: "linux"
+        description: The target Operating System for the heroku binary. Must be one of "linux", "darwin", "win32".
         type: string
         type: enum
-        enum: ["linux", “darwin”, “win32”]
+        enum: ["linux", "darwin", "win32"]
       arch:
         type: string
         default: "x86"
-        description: The target CPU architecture for the heroku binary. Must be one of “x64”, “x86”, “arm”.
+        description: The target CPU architecture for the heroku binary. Must be one of "x64", "x86", "arm".
         type: enum
-        enum: [“x64”, “x86”, “arm”]
+        enum: ["x64", "x86", "arm"]
 
     steps:
       - run:
