Using docker image instead of machine.

--- a/.circleci.src/config.yml
+++ b/.circleci.src/config.yml
@@ -2,7 +2,8 @@ version: 2
 
 jobs:
   print_version:
-    machine: true
+    docker:
+      - image: ubuntu:bionic
     steps:
       - heroku/install
       - run: heroku --version
