--- a/.circleci.src/orbs/heroku/@orb.yml
+++ b/.circleci.src/orbs/heroku/@orb.yml
@@ -12,3 +12,10 @@ commands:
             else
               echo "Heroku is already installed. No operation was performed."
             fi
+
+  deploy:
+    steps:
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
