--- a/.circleci.src/orbs/heroku/@orb.yml
+++ b/.circleci.src/orbs/heroku/@orb.yml
@@ -1,6 +1,15 @@
 version: 2
 description: "Provides basic functionality for deploying to Heroku"
 
+executors:
+  default:
+    parameters:
+      tag:
+        type: string
+        default: "bionic"
+    docker:
+      - image: buildpack-deps:{{parameters.tag}}
+
 commands:
   install:
     steps:
