Using <> instead of {}

--- a/.circleci.src/orbs/heroku/@orb.yml
+++ b/.circleci.src/orbs/heroku/@orb.yml
@@ -8,7 +8,7 @@ executors:
         type: string
         default: "bionic"
     docker:
-      - image: buildpack-deps:{{parameters.tag}}
+      - image: buildpack-deps:<< parameters.tag >>
 
 commands:
   install:
